[tool.poetry]
name = "crbnet-works-cdk"
version = "0.1.0"
description = ""
authors = ["Chris Bowles <BowlesCR@users.noreply.github.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
aws-cdk-lib = "^2.164.1"
constructs = "^10.4.2"


[tool.poetry.group.dev.dependencies]
black = "^24"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 160
target-version = ['py312', 'py313']
